--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,10 +72,7 @@ jobs:
           poetry -C viridian/algae install --without client
 
       - name: Test Viridian Reef (unit) 🧪
-        run: |
-          sudo iptables -A FORWARD -o lo ! --dst 127.0.0.1 -j ACCEPT
-          sudo iptables -L FORWARD -v -n -t mangle
-          sudo -E env "PATH=$PATH" cargo test --package SeasideVPN-Reef --lib --manifest-path viridian/reef/Cargo.toml -- --nocapture --show-output
+        run: sudo -E env "PATH=$PATH" cargo test --package SeasideVPN-Reef --lib --manifest-path viridian/reef/Cargo.toml -- --nocapture --show-output
 
       - name: Prepare Host
         run: npm run --prefix .github/scripts configure-viridian-test
