--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
     name: Test Viridian Reef
     runs-on: ${{ format('{0}-latest', matrix.os) }}
     env:
-      SUDO: ${{ matrix.os == 'ubuntu' && 'sudo' || '' }}
+      SUDO: ${{ matrix.os == 'ubuntu' && 'sudo -E' || '' }}
     strategy:
       fail-fast: false
       matrix:
