--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -20,8 +20,11 @@ packages = [
 
 
 
+[tool.poetry.requires-plugins]
+poethepoet = "^0.32.1"
+
 [tool.poetry.dependencies]
-python = ">=3.8.1,<3.13"
+python = ">=3.8.1,!=3.9.0,!=3.9.1,<3.13"
 colorama = "^0.4.6"
 
 [tool.poetry.group.client.dependencies]
@@ -46,12 +49,17 @@ pyinstaller = "^6.9.0"
 python-on-whales = "^0.74.0"
 grpcio-tools = "^1.62.0"
 PyYAML = "^6.0.2"
+zipapps = "^2024.8.7"
 betterproto = { version = "^2.0.0b6", extras = ["compiler"] }
+
+[tool.poetry.group.setup.dependencies]
+cryptography = "^44.0.0"
+semver = "^3.0.2"
+
 
 
 [tool.poe.poetry_hooks]
 post_install = "generate"
-
 
 [tool.poe.tasks]
 generate.script = "scripts:generate"
