--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -22,6 +22,7 @@ packages = [
 
 [tool.poetry.requires-plugins]
 poethepoet = "^0.32.1"
+poetry-plugin-export = "^1.9.0"
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,!=3.9.0,!=3.9.1,<3.13"
