--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -50,7 +50,7 @@ jobs:
           python-version: "3.10"
 
       - name: Install Dependencies 🔮
-        run: pip3 install poetry poethepoet[poetry_plugin]
+        run: pip3 install poetry
 
       - name: Lint Viridian Algae 🧪
         run: make lint-algae
