--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -14,7 +14,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends python3-pip && 
 # Export dependencies to a `requirements.txt` install protobuf compiler.
 COPY viridian/algae/pyproject.toml ./
 RUN poetry export -f requirements.txt --with client,devel --without-hashes --output requirements.txt
-RUN poetry install --without client,devel
+RUN poetry install --without client,devel,setup
 
 # Copy protobuf files and generate python code.
 COPY vessels ./vessels
