--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: BUILD
+# TODO: fix "poetry poe -C" commands once the issue is finally resolved: https://github.com/nat-n/poethepoet/issues/270
 
 on:
   workflow_call:
@@ -32,12 +33,12 @@ jobs:
       - name: Build Algae Executable 🏗️
         env:
           EXEC_NAME: viridian-algae-executable
-        run: poetry poe -C viridian/algae compile ${{ env.EXEC_NAME }}.run
+        run: cd viridian/algae && poetry poe compile ${{ env.EXEC_NAME }}.run
 
       - name: Build Caerulean Installer 📥
         env:
           EXEC_NAME: caerulean-installer
-        run: poetry poe -C viridian/algae bundle ${{ env.EXEC_NAME }}.pyz
+        run: cd viridian/algae && poetry poe bundle ${{ env.EXEC_NAME }}.pyz
 
       - name: Create Artifact Name From Branch Name 🌱
         uses: mad9000/actions-find-and-replace-string@5
