--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -51,6 +51,7 @@ python-on-whales = "^0.74.0"
 grpcio-tools = "^1.62.0"
 PyYAML = "^6.0.2"
 zipapps = "^2024.8.7"
+cryptography = "^44.0.0"
 betterproto = { version = "^2.0.0b6", extras = ["compiler"] }
 
 [tool.poetry.group.setup.dependencies]
