--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -29,6 +29,7 @@ neli = "^0.6.4"
 iptables = "^0.5.1"
 
 [target.'cfg(target_os = "windows")'.dependencies]
+windivert = { version = "0.6.0", features = ["static"] }
 windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"] }
 
 [build-dependencies]
