--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -19,6 +19,7 @@ gethostname = "^0.5.0"
 chacha20poly1305 = "^0.10.1"
 simple-error = "^0.3.1"
 futures = "^0.3.31"
+ipnet = "^2.10.1"
 tun = { version = "^0.7.1", features = ["async"] }
 tonic = { version = "^0.12.3", features = ["tls", "tls-webpki-roots"] }
 tokio = { version = "^1.41.0", features = ["macros", "rt-multi-thread", "process", "signal", "net"] }
