--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -27,7 +27,7 @@ structopt = { version = "^0.3.26", optional = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 neli = "^0.6.4"
-iptables = "^0.5.1"
+nftables = "^0.5.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windivert = { version = "^0.6.0", features = ["static", "vendored"] }
