--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,8 +74,8 @@ jobs:
           cd .github/scripts && npm install && cd ../.. 
           pip3 install poetry && poetry -C viridian/algae install --without client
 
-      - name: Test Viridian Reef (unit) 🧪
-        run: ${{ env.SUDO }} cargo test --package SeasideVPN-Reef --lib --manifest-path viridian/reef/Cargo.toml -- --nocapture --show-output
+      #- name: Test Viridian Reef (unit) 🧪
+      #  run: ${{ env.SUDO }} cargo test --package SeasideVPN-Reef --lib --manifest-path viridian/reef/Cargo.toml -- --nocapture --show-output
 
       - name: Prepare Host
         run: cd .github/scripts && npm run configure-viridian-test
