viridian testing in docker removed

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -83,7 +83,8 @@ jobs:
       - name: Load .ENV File
         uses: aarcangeli/load-dotenv@v1
         with:
-          path: .github/scripts
+          path: viridian/reef/docker
+          filenames: host.env
 
       - name: Test Viridian Reef (integration) 🧪
         env:
