--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -33,6 +33,7 @@ pyroute2 = "^0.7.9"
 python-iptables = "^1.0.1"
 betterproto = "^2.0.0b6"
 pycryptodome = "^3.18.0"
+eciespy = "^0.4.3"
 
 [tool.poetry.group.devel.dependencies]
 pytest = "^8.3.2"
