--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -25,15 +25,14 @@ poethepoet = "^0.32.1"
 poetry-plugin-export = "^1.9.0"
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,!=3.9.0,!=3.9.1,<3.13"
+python = ">=3.10,<3.13"
 colorama = "^0.4.6"
 
 [tool.poetry.group.client.dependencies]
 pyroute2 = "^0.7.9"
 python-iptables = "^1.0.1"
 betterproto = "^2.0.0b6"
-pycryptodome = "^3.18.0"
-eciespy = "^0.4.3"
+pymonocypher = "^4.0.2.5"
 
 [tool.poetry.group.devel.dependencies]
 pytest = "^8.3.2"
