--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -32,6 +32,8 @@ colorama = "^0.4.6"
 pyroute2 = "^0.7.9"
 python-iptables = "^1.0.1"
 betterproto = "^2.0.0b6"
+
+[tool.poetry.group.typhoon.dependencies]
 pymonocypher = "^4.0.2.5"
 
 [tool.poetry.group.devel.dependencies]
@@ -59,13 +61,16 @@ betterproto = { version = "^2.0.0b6", extras = ["compiler"] }
 cryptography = "^44.0.0"
 semver = "^3.0.2"
 
+[tool.poetry.group.protocol.dependencies]
+jupyter = "^1.1.1"
+
 
 
 [tool.poe.poetry_hooks]
 post_install = "generate"
 
 [tool.poe.tasks]
-generate.script = "scripts:generate"
+generate = { script = "scripts:generate", env = { "PYTHONPATH" = "." } }
 lint.script = "scripts:lint"
 format.script = "scripts:format"
 test-unit.script = "scripts:test_unit"
