--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install Dependencies 🔮
         run: |
           pip3 install poetry poethepoet[poetry_plugin]
-          poetry -C viridian/algae install --without client,devel,setup
+          poetry -C viridian/algae install --without client,devel,setup && poetry -C viridian/algae self add 'poethepoet[poetry_plugin]'
 
       - name: Test Viridian Algae (unit) 🧪
         run: cd viridian/algae && poetry poe test-unit
@@ -125,7 +125,7 @@ jobs:
       - name: Install Dependencies 🔮
         run: |
           pip3 install poetry
-          poetry -C viridian/algae install --without client,devel
+          poetry -C viridian/algae install --without client,devel && poetry -C viridian/algae self add 'poethepoet[poetry_plugin]'
 
       - name: Compile Installer Script 🏗️
         run: cd viridian/algae && poetry poe bundle
