--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install Dependencies 🔮
         run: |
           pip3 install poetry
-          poetry -C viridian/algae install --without devel && poetry -C viridian/algae self add 'poethepoet[poetry_plugin]'
+          poetry -C viridian/algae install --without devel && poetry -C viridian/algae self add 'poethepoet[poetry_plugin]' poetry-plugin-export
 
       - name: Build Algae Executable 🏗️
         env:
