--- a/viridian/algae/docker/test.conf.env
+++ b/viridian/algae/docker/test.conf.env
@@ -1,14 +1,19 @@
-# Caerulean owner payload, provides access to privileged authorisation
-SEASIDE_PAYLOAD_OWNER=super_secret_owner_payload_data
-# Caerulean user payload, provides access to network authorisation
-SEASIDE_PAYLOAD_VIRIDIAN=super_secret_user_payload_data
+# Caerulean owner payload, provides access to privileged authorization
+SEASIDE_API_KEY_OWNER=super_secret_owner_payload_data
+# Caerulean user payload, provides access to network authorization
+SEASIDE_API_KEY_ADMIN=super_secret_admin_payload_data
 
 # Whirlpool internal IP address
 SEASIDE_ADDRESS=10.65.0.87
 # Whirlpool external IP address
-SEASIDE_EXTRNAL=10.87.0.87
+SEASIDE_EXTERNAL=10.87.0.87
 # Whirlpool net port
-SEASIDE_CTRLPORT=8587
+SEASIDE_API_PORT=8587
 
 # Logging level for all seaside nodes
 SEASIDE_LOG_LEVEL=DEBUG
+
+ # Buffer for echo server message storing
+BUFFER_SIZE=8192
+ # Port for echo server accessing
+ECHO_PORT=5000
