checksum recalculation fixed

--- a/caerulean/whirlpool/Dockerfile
+++ b/caerulean/whirlpool/Dockerfile
@@ -5,6 +5,8 @@ FROM golang:1.23-alpine AS builder
 
 WORKDIR /seaside/caerulean
 
+ARG RUNNING_IN_CI
+
 # Protobuf development library are required for executable building.
 # Go lint and iptables are required for testing.
 ENV PROTOGO_PROTOC_VERSION=24.4
@@ -13,7 +15,7 @@ RUN apk add --no-cache make tar wget build-base iptables protobuf protobuf-dev \
     && go install golang.org/x/lint/golint@latest \
     && go install github.com/xlab/c-for-go@latest
 
-ENV RUNNING_IN_CI=0
+ENV RUNNING_IN_CI=${RUNNING_IN_CI:-0}
 
 # Copy whirlpool go.mod, protobuf files and generate protobuf sources.
 COPY caerulean/whirlpool/monocypher-go ./monocypher-go
