--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -46,8 +46,8 @@ ENV SEASIDE_ADDRESS=
 ENV SEASIDE_API_KEY_OWNER=
 ENV SEASIDE_API_PORT=
 
-ENV RUNNING_IN_CI=$RUNNING_IN_CI
 ENV TEST_FILE=$RUNNING_TEST_FILE
+ENV RUNNING_IN_CI=${RUNNING_IN_CI:-0}
 ENV LOGGING_LEVEL=${RUNNING_IN_CI:+ERROR}
 ENV LOGGING_LEVEL=${RUNNING_IN_CI:-DEBUG}
 
