--- a/viridian/algae/docker/compose.base.yml
+++ b/viridian/algae/docker/compose.base.yml
@@ -9,6 +9,7 @@ services:
   algae:
     image: seaside-algae
     privileged: true
+    init: true
     build:
       dockerfile: viridian/algae/docker/Dockerfile.algae
       context: ../../..
@@ -18,6 +19,9 @@ services:
     environment:
       RUNNING_IN_CI: ${RUNNING_IN_CI:-0}
       SEASIDE_ROOT_CERTIFICATE_AUTHORITY: /seaside/viridian/ca/rootCA.crt
+    dns:
+      - 1.1.1.1
+      - 8.8.8.8
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=1
     volumes:
@@ -27,6 +31,7 @@ services:
     image: seaside-whirlpool
     container_name: seaside-whirlpool
     privileged: true
+    init: true
     build:
       dockerfile: caerulean/whirlpool/Dockerfile
       context: ../../..
@@ -46,6 +51,7 @@ services:
     image: seaside-echo
     container_name: seaside-echo
     privileged: true
+    init: true
     build:
       dockerfile: Dockerfile.echo
       target: default-routed
@@ -57,6 +63,7 @@ services:
   router:
     image: seaside-router
     privileged: true
+    init: true
     build:
       dockerfile: Dockerfile.router
       target: default
